<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuActivity">

  <!---  <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imageButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/iron"
        android:layout_alignParentTop="true" />  -->

    <Button
        android:id="@+id/fragment_left_menu_login"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/iron"
        android:onClick="openAbout"
        android:text="@string/About" />

    <Button
        android:id="@+id/button"
        android:layout_width="220dp"
        android:layout_height="230dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/fragment_left_menu_login"
        android:layout_toRightOf="@+id/fragment_left_menu_login"
        android:background="@drawable/super1"
        android:onClick="openEvents"
        android:text="@string/Events" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="230dp"
        android:layout_below="@+id/fragment_left_menu_login"
        android:layout_toLeftOf="@+id/button"
        android:layout_toStartOf="@+id/button"
        android:background="@drawable/wolv"
        android:text="@string/Sponsors" />

    <Button
        android:id="@+id/button3"
        android:layout_width="220dp"
        android:layout_height="150dp"
        android:layout_alignBottom="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_toEndOf="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:background="@drawable/bat"
        android:onClick="openTeam"
        android:text="@string/Team" />

    <Button
        android:id="@+id/button4"
        android:layout_width="450dp"
        android:layout_height="250dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button2"
        android:background="@drawable/spid"
        android:onClick="openLink"
        android:text="@string/Vedio" />


</RelativeLayout>
